--- a/index.html
+++ b/index.html
@@ -88,11 +88,38 @@
                 <div class="owl-carousel owl-theme">
 
                     <div class="skill">
-                        <span class="chart" data-percent="91">
-                            <span class="percent">91</span>
+                        <span class="chart" data-percent="90">
+                            <span class="percent">90</span>
                             <canvas height="152" width="152"></canvas>
                         </span>
-                        <h4>Engineering</h4>
+                        <h4>Recruiting</h4>
+                        <p>Software hardware & ifrastructure recruitment</p>
+                    </div>
+
+                    <div class="skill">
+                        <span class="chart" data-percent="85">
+                            <span class="percent">85</span>
+                            <canvas height="152" width="152"></canvas>
+                        </span>
+                        <h4>Sourcing</h4>
+                        <p>Software hardware & ifrastructure recruitment</p>
+                    </div>
+
+                    <div class="skill">
+                        <span class="chart" data-percent="75">
+                            <span class="percent">75</span>
+                            <canvas height="152" width="152"></canvas>
+                        </span>
+                        <h4>Mentoring</h4>
+                        <p>Software hardware & ifrastructure recruitment</p>
+                    </div>
+
+                    <div class="skill">
+                        <span class="chart" data-percent="50">
+                            <span class="percent">50</span>
+                            <canvas height="152" width="152"></canvas>
+                        </span>
+                        <h4>Management</h4>
                         <p>Software hardware & ifrastructure recruitment</p>
                     </div>
                     
